--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6365,6 +6365,12 @@ a.category-slug.active {
 }
 .custom-input_radio {
   border-radius: 100%;
+  outline: none;
+  -webkit-box-shadow: 0px 0px 0px 1px #101820;
+  box-shadow: 0px 0px 0px 1px #101820;
+}
+.custom-input_radio .lt-ie9 {
+  outline: 1px solid #101820;
 }
 .custom-input_label {
   position: relative;
@@ -6401,6 +6407,14 @@ a.category-slug.active {
 .is-active .custom-input_radio {
   background-color: #7fb8e6;
   border: 3px solid #ffffff;
+}
+.is-checked .custom-input_radio {
+  outline: none;
+  -webkit-box-shadow: 0px 0px 0px 1px #0072ce;
+  box-shadow: 0px 0px 0px 1px #0072ce;
+}
+.is-checked .custom-input_radio .lt-ie9 {
+  outline: 1px solid #0072ce;
 }
 .is-hovered .custom-input_radio,
 .is-focused .custom-input_radio,
