--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7226,6 +7226,13 @@ a.category-slug.active {
 
 .custom-input_radio {
   border-radius: 100%;
+  outline: none;
+  -webkit-box-shadow: 0px 0px 0px 1px #101820;
+  box-shadow: 0px 0px 0px 1px #101820;
+}
+
+.custom-input_radio .lt-ie9 {
+  outline: 1px solid #101820;
 }
 
 .custom-input_label {
@@ -7268,6 +7275,16 @@ a.category-slug.active {
 .is-active .custom-input_radio {
   background-color: #7fb8e6;
   border: 3px solid #ffffff;
+}
+
+.is-checked .custom-input_radio {
+  outline: none;
+  -webkit-box-shadow: 0px 0px 0px 1px #0072ce;
+  box-shadow: 0px 0px 0px 1px #0072ce;
+}
+
+.is-checked .custom-input_radio .lt-ie9 {
+  outline: 1px solid #0072ce;
 }
 
 .is-hovered .custom-input_radio,
