Adds min-height to custom-select to fix ie7.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -249,6 +249,7 @@ select[multiple].success {
         position: relative;
         // Push the native select arrow out of view
         width: 100%;
+        min-height: unit(@base-line-height-px / @base-font-size-px, em);
         padding: unit( 4px / @base-font-size-px, em );
         z-index: 3;
         // Customize the colors
