--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6163,7 +6163,7 @@ a.category-slug.active {
 .is-enabled.custom-select {
   overflow: hidden;
   position: relative;
-  min-height: 1.875em;
+  min-height: 2em;
   z-index: 1;
   border: solid 1px #babbbd;
   background: #ffffff;
@@ -6210,10 +6210,11 @@ a.category-slug.active {
   border-radius: 0;
   background-color: transparent;
   background-image: none;
+  color: #101820;
+  line-height: 1;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
-  color: #101820;
 }
 .is-hovered .custom-select_select,
 .is-focused .custom-select_select {
