--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6204,6 +6204,7 @@ a.category-slug.active {
 .custom-select_select {
   position: relative;
   width: 100%;
+  max-height: 1.875em;
   padding: 0.25em;
   z-index: 3;
   border: 0;
@@ -6211,7 +6212,6 @@ a.category-slug.active {
   background-color: transparent;
   background-image: none;
   color: #101820;
-  line-height: 1;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
