--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7059,6 +7059,7 @@ a.category-slug.active {
 .custom-select_select {
   position: relative;
   width: 100%;
+  max-height: 1.875em;
   padding: 0.25em;
   z-index: 3;
   border: 0;
@@ -7066,7 +7067,6 @@ a.category-slug.active {
   background-color: transparent;
   background-image: none;
   color: #101820;
-  line-height: 1;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
