Styles .related-posts.

--- a/static/css/post.less
+++ b/static/css/post.less
@@ -425,7 +425,8 @@
     }
 }
 
-.popular-stories {
+.popular-stories,
+.related-posts {
     .list {
         .u-respond-to-range(600px, 800px, {
             .grid_nested-col-group();
