--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7945,13 +7945,15 @@ a.category-slug.active {
   }
 }
 @media only all and (min-width: 37.5em) and (max-width: 50em) {
-  .popular-stories .list {
+  .popular-stories .list,
+  .related-posts .list {
     display: block;
     position: relative;
     margin-left: -15px;
     margin-right: -15px;
   }
-  .popular-stories .list .list_item {
+  .popular-stories .list .list_item,
+  .related-posts .list .list_item {
     display: inline-block;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -7962,23 +7964,28 @@ a.category-slug.active {
     vertical-align: top;
     width: 50%;
   }
-  .ie .popular-stories .list .list_item {
+  .ie .popular-stories .list .list_item,
+  .ie .related-posts .list .list_item {
     margin-right: -0.26em;
   }
-  .lt-ie8 .popular-stories .list .list_item {
+  .lt-ie8 .popular-stories .list .list_item,
+  .lt-ie8 .related-posts .list .list_item {
     display: inline;
     margin-right: 0;
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
-  .popular-stories .list.list__spaced {
+  .popular-stories .list.list__spaced,
+  .related-posts .list.list__spaced {
     margin-top: -1.5em;
   }
-  .popular-stories .list.list__spaced .list_item {
+  .popular-stories .list.list__spaced .list_item,
+  .related-posts .list.list__spaced .list_item {
     margin-top: 1.5em;
   }
 }
-.popular-stories .list_link {
+.popular-stories .list_link,
+.related-posts .list_link {
   margin-top: 0;
   margin-bottom: 0.27777778em;
   font-size: 1.125em;
@@ -7990,31 +7997,41 @@ a.category-slug.active {
   border-bottom-color: #101820;
   border-bottom-width: 0 !important;
 }
-.lt-ie9 .popular-stories .list_link {
+.lt-ie9 .popular-stories .list_link,
+.lt-ie9 .related-posts .list_link {
   font-weight: normal !important;
 }
 .popular-stories .list_link:visited,
-.popular-stories .list_link.visited {
+.related-posts .list_link:visited,
+.popular-stories .list_link.visited,
+.related-posts .list_link.visited {
   border-bottom-color: #101820;
   color: #101820;
 }
 .popular-stories .list_link:hover,
-.popular-stories .list_link.hover {
+.related-posts .list_link:hover,
+.popular-stories .list_link.hover,
+.related-posts .list_link.hover {
   border-bottom-color: #328ed8;
   color: #328ed8;
 }
 .popular-stories .list_link:focus,
-.popular-stories .list_link.focus {
+.related-posts .list_link:focus,
+.popular-stories .list_link.focus,
+.related-posts .list_link.focus {
   border-bottom-color: #328ed8;
   color: #328ed8;
 }
 .popular-stories .list_link:active,
-.popular-stories .list_link.active {
+.related-posts .list_link:active,
+.popular-stories .list_link.active,
+.related-posts .list_link.active {
   border-bottom-color: #101820;
   color: #101820;
 }
 @media only all and (min-width: 37.5em) {
-  .popular-stories .list_link {
+  .popular-stories .list_link,
+  .related-posts .list_link {
     font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -8024,23 +8041,31 @@ a.category-slug.active {
     line-height: 1.27272727;
   }
   .popular-stories .list_link em,
-  .popular-stories .list_link i {
+  .related-posts .list_link em,
+  .popular-stories .list_link i,
+  .related-posts .list_link i {
     font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
     font-style: italic;
     font-weight: normal;
   }
   .lt-ie9 .popular-stories .list_link em,
-  .lt-ie9 .popular-stories .list_link i {
+  .lt-ie9 .related-posts .list_link em,
+  .lt-ie9 .popular-stories .list_link i,
+  .lt-ie9 .related-posts .list_link i {
     font-style: normal !important;
   }
   .popular-stories .list_link strong,
-  .popular-stories .list_link b {
+  .related-posts .list_link strong,
+  .popular-stories .list_link b,
+  .related-posts .list_link b {
     font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
   }
   .lt-ie9 .popular-stories .list_link strong,
-  .lt-ie9 .popular-stories .list_link b {
+  .lt-ie9 .related-posts .list_link strong,
+  .lt-ie9 .popular-stories .list_link b,
+  .lt-ie9 .related-posts .list_link b {
     font-weight: normal !important;
   }
 }
