--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -36,6 +36,10 @@
     });
 }
 
+.content_sidebar-item + .content_sidebar-item {
+    margin-top: unit(60px / @base-font-size-px, em);
+}
+
 .header .demo-placeholder,
 .content_hero .demo-placeholder,
 .footer .demo-placeholder {
@@ -144,6 +148,7 @@
     }); // END min-width 801 block
 
 } // END .content__bleedbar
+
 
 .footer {
     padding: 1.5em 0;
