--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5365,6 +5365,9 @@ img {
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
+.content_sidebar-item + .content_sidebar-item {
+  margin-top: 3.75em;
+}
 .header .demo-placeholder,
 .content_hero .demo-placeholder,
 .footer .demo-placeholder {
