--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -143,14 +143,12 @@
 <script src="../static/js/main.min.js"></script>
 <script src="../static/js/jquery.cf_input-split.js"></script>
 <script>
-    $('.input-split[name="filter_range_date_gte"]')
-    .cf_inputSplit(
+    $('#filter_range_date_gte').cf_inputSplit(
         '#filter_range_date_gte-replacement',
         ['#filter_from_year', '#filter_from_month'],
         '-'
     );
-    $('.input-split[name="filter_range_date_lte"]')
-    .cf_inputSplit(
+    $('#filter_range_date_lte').cf_inputSplit(
         '#filter_range_date_lte-replacement',
         ['#filter_to_year', '#filter_to_month'],
         '-'
