--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7237,7 +7237,7 @@ a.category-slug.active {
   box-shadow: 0px 0px 0px 1px #101820;
 }
 
-.custom-input_radio .lt-ie9 {
+.lt-ie9 .custom-input_radio {
   outline: 1px solid #101820;
 }
 
@@ -7289,7 +7289,7 @@ a.category-slug.active {
   box-shadow: 0px 0px 0px 1px #0072ce;
 }
 
-.is-checked .custom-input_radio .lt-ie9 {
+.lt-ie9 .is-checked .custom-input_radio {
   outline: 1px solid #0072ce;
 }
 
@@ -7302,10 +7302,10 @@ a.category-slug.active {
   box-shadow: 0px 0px 0px 2px #0072ce;
 }
 
-.is-hovered .custom-input_radio .lt-ie9,
-.is-focused .custom-input_radio .lt-ie9,
-.is-checked.is-hovered .custom-input_radio .lt-ie9,
-.is-checked.is-focused .custom-input_radio .lt-ie9 {
+.lt-ie9 .is-hovered .custom-input_radio,
+.lt-ie9 .is-focused .custom-input_radio,
+.lt-ie9 .is-checked.is-hovered .custom-input_radio,
+.lt-ie9 .is-checked.is-focused .custom-input_radio {
   outline: 2px solid #0072ce;
 }
 
