--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7057,6 +7057,10 @@ a.category-slug.active {
   z-index: 1;
   font-family: Arial, sans-serif;
   line-height: 1.375;
+  color: #101820;
+}
+
+.custom-select_placeholder {
   color: #babbbd;
 }
 
