--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -243,6 +243,10 @@ select[multiple].success {
         z-index: 1;
         font-family: Arial, sans-serif;
         line-height: @base-line-height;
+        color: @black;
+    }
+
+    &_placeholder {
         color: @gray-50;
     }
 
