Updated css for custom-select and meta header.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3729,7 +3729,7 @@ textarea {
         markup: |
           <span class="cf-icon cf-icon-contract"></span>
           <span class="cf-icon cf-icon-contract-round"></span>
-      - name: comlaint
+      - name: complaint
         markup: |
           <span class="cf-icon cf-icon-complaint"></span>
           <span class="cf-icon cf-icon-complaint-round"></span>
