--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -2050,7 +2050,7 @@ input.btn::-moz-focus-inner {
           -----------------------
           .expandable_header.expandable_header__spaced
       notes:
-        - "Adds some margin underneath .expandable_header."
+        - "Adds some padding underneath .expandable_header."
     tags:
     - cf-expandables
 */
@@ -2061,7 +2061,7 @@ input.btn::-moz-focus-inner {
 }
 
 .expandable_header__spaced {
-  margin-bottom: 0.9375em;
+  padding-bottom: 0.9375em;
 }
 
 .expandable_header-left {
