--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -22,21 +22,17 @@
           <h3 class="docs-pattern_header">Wrapper class</h3>
           <section class="docs-pattern_pattern">
 <div class="wrapper">
-    This div will become a cf-grid wrapper at 801px and above.
+    Wrapper
 </div>
 
           </section>
           <footer class="docs-pattern_footer">
             <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;div class=&quot;wrapper&quot;&gt;
-    This div will become a cf-grid wrapper at 801px and above.
+    Wrapper
 &lt;/div&gt;</code></pre>
-          </footer>
-        </div>
-        <div class="docs-pattern">
-          <h3 class="docs-pattern_header">IE fixes</h3>
-          <footer class="docs-pattern_footer">
             <ul class="docs-notes">
-              <li>Use this class to hide something from view while keeping it accessible to screen readers.</li>
+              <li>Turns an element into a cf-grid wrapper at 801px and above.</li>
+              <li>Includes some explicit declarations for IE8 due to the fact that it doesn't support media queries.</li>
             </ul>
           </footer>
         </div>
@@ -59,6 +55,31 @@
 }</code></pre>
       </div>
     </div>
+    <div id="content-bar" class="docs-component">
+      <h2 class="docs-component_header"><span>Content bar</span></h2>
+      <div class="docs-patterns">
+        <div class="docs-pattern">
+          <h3 class="docs-pattern_header">A 10 pixel bar that divides the header or hero from the main content</h3>
+          <section class="docs-pattern_pattern">
+<div class="content_bar"></div>
+
+          </section>
+          <footer class="docs-pattern_footer">
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;</code></pre>
+            <ul class="docs-notes">
+              <li>This is necessary because we don't have a predictable place to put a full-width border. It needs to be under the hero on pages with heroes, but under the header if there is no hero.</li>
+              <li>.content_bar must come after .content_hero but before .content_wrapper</li>
+            </ul>
+          </footer>
+        </div>
+      </div>
+      <div class="docs-css">
+        <pre class="docs-code"><code data-language="css">.content_bar {
+  height: 10px;
+  background: #2cb34a;
+}</code></pre>
+      </div>
+    </div>
     <div id="main-content-and-sidebar" class="docs-component">
       <h2 class="docs-component_header"><span>Main content and sidebar</span></h2>
       <div class="docs-patterns">
@@ -66,7 +87,7 @@
           <h3 class="docs-pattern_header">Standard styling for the main content area and sidebar</h3>
           <section class="docs-pattern_pattern">
 <main class="content content__1-3" id="main" role="main">
-    <section class="content_hero">
+    <section class="content_hero" style="background: #E3E4E5">
         Content hero
     </section>
     <div class="content_bar"></div>
@@ -74,7 +95,7 @@
         <section class="content_main">
             Main content area
         </section><!-- END .content_main -->
-        <aside class="content_sidebar">
+        <aside class="content_sidebar" style="background: #F1F2F2">
             Sidebar
         </aside><!-- END .content_sidebar -->
     </div><!-- END .content_wrapper -->
@@ -83,7 +104,7 @@
           </section>
           <footer class="docs-pattern_footer">
             <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__1-3&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
-    &lt;section class=&quot;content_hero&quot;&gt;
+    &lt;section class=&quot;content_hero&quot; style=&quot;background: #E3E4E5&quot;&gt;
         Content hero
     &lt;/section&gt;
     &lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;
@@ -91,7 +112,7 @@
         &lt;section class=&quot;content_main&quot;&gt;
             Main content area
         &lt;/section&gt;&lt;!-- END .content_main --&gt;
-        &lt;aside class=&quot;content_sidebar&quot;&gt;
+        &lt;aside class=&quot;content_sidebar&quot; style=&quot;background: #F1F2F2&quot;&gt;
             Sidebar
         &lt;/aside&gt;&lt;!-- END .content_sidebar --&gt;
     &lt;/div&gt;&lt;!-- END .content_wrapper --&gt;
@@ -111,7 +132,36 @@ main.content
             <ul class="docs-notes">
               <li>.content_bar must come after .content_hero (if it exists) but before .content_wrapper</li>
               <li>.content_main and .content_sidebar are stacked up to 800px, and then they go side-by-side</li>
-              <li>Add a class of .content__L-R to main.content to determine the width ratio of .content_main and .content_sidebar, where 'L' is the left-hand item and 'R' is the right hand item. The two common configurations are 1-3 (sidebar on the left, content on the right, in a ratio of 1:3) and 2-1 (content on the left, sidebar on the right, in a ratio of 2:1). It is assumed that the content is wider than the sidebar.</li>
+              <li>Inline styling is for demonstration purposes only; do not include it in your markup.</li>
+            </ul>
+          </footer>
+        </div>
+        <div class="docs-pattern">
+          <h3 class="docs-pattern_header">Width classes</h3>
+          <footer class="docs-pattern_footer">
+            <ul class="docs-codenotes">
+              <li>
+                <pre class="docs-code"><code>.content__1-3</code></pre>
+              </li>
+              <li>
+                <pre class="docs-code"><code>.content__2-1</code></pre>
+              </li>
+            </ul>
+            <ul class="docs-notes">
+              <li>Add a class of .content__L-R to main.content to determine the width ratio of .content_main and .content_sidebar, where 'L' is the left-hand item and 'R' is the right-hand item. The two common configurations are 1-3 (sidebar on the left, content on the right, in a ratio of 1:3) and 2-1 (content on the left, sidebar on the right, in a ratio of 2:1). It is assumed that the content is wider than the sidebar.</li>
+            </ul>
+          </footer>
+        </div>
+        <div class="docs-pattern">
+          <h3 class="docs-pattern_header">Narrow content column option</h3>
+          <footer class="docs-pattern_footer">
+            <ul class="docs-codenotes">
+              <li>
+                <pre class="docs-code"><code>.content_main__narrow</code></pre>
+              </li>
+            </ul>
+            <ul class="docs-notes">
+              <li>Add a class of .content-main__narrow to .content-main to get a one-column (in a 12-column grid) gutter on the right side.</li>
             </ul>
           </footer>
         </div>
@@ -271,23 +321,24 @@ main.content
         <div class="docs-pattern">
           <h3 class="docs-pattern_header">Sidebar item spacing</h3>
           <section class="docs-pattern_pattern">
-<section class="content_sidebar-item related-posts">
+<section class="content_sidebar-item related-posts" style="background: #F1F2F2">
     Related posts
 </section>
-<section class="content_sidebar-item related-news">
+<section class="content_sidebar-item related-news" style="background: #F1F2F2">
     Related news
 </section>
 
           </section>
           <footer class="docs-pattern_footer">
-            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;section class=&quot;content_sidebar-item related-posts&quot;&gt;
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;section class=&quot;content_sidebar-item related-posts&quot; style=&quot;background: #F1F2F2&quot;&gt;
     Related posts
 &lt;/section&gt;
-&lt;section class=&quot;content_sidebar-item related-news&quot;&gt;
+&lt;section class=&quot;content_sidebar-item related-news&quot; style=&quot;background: #F1F2F2&quot;&gt;
     Related news
 &lt;/section&gt;</code></pre>
             <ul class="docs-notes">
               <li>Gives some vertical margin between sidebar items.</li>
+              <li>Inline styling is for demonstration purposes only; do not include it in your markup.</li>
             </ul>
           </footer>
         </div>
@@ -298,38 +349,14 @@ main.content
 }</code></pre>
       </div>
     </div>
-    <div id="content-bar" class="docs-component">
-      <h2 class="docs-component_header"><span>Content bar</span></h2>
-      <div class="docs-patterns">
-        <div class="docs-pattern">
-          <h3 class="docs-pattern_header">A 10 pixel bar that divides the header or hero from the main content</h3>
-          <section class="docs-pattern_pattern">
-<div class="content_bar"></div>
-
-          </section>
-          <footer class="docs-pattern_footer">
-            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;</code></pre>
-            <ul class="docs-notes">
-              <li>.content_bar must come after .content_hero but before .content_wrapper</li>
-            </ul>
-          </footer>
-        </div>
-      </div>
-      <div class="docs-css">
-        <pre class="docs-code"><code data-language="css">.content_bar {
-  height: 10px;
-  background: #2cb34a;
-}</code></pre>
-      </div>
-    </div>
     <div id="bleedbar-sidebar-styling" class="docs-component">
       <h2 class="docs-component_header"><span>Bleedbar sidebar styling</span></h2>
       <div class="docs-patterns">
         <div class="docs-pattern">
           <h3 class="docs-pattern_header">Give the sidebar a background color that bleeds off the edge of the screen</h3>
           <section class="docs-pattern_pattern">
-<main class="content content__2-1 content_bleedbar" id="main" role="main">
-    <section class="content_hero">
+<main class="content content__2-1 content__bleedbar" id="main" role="main">
+    <section class="content_hero" style="background: #E3E4E5">
         Content hero
     </section>
     <div class="content_bar"></div>
@@ -345,8 +372,8 @@ main.content
 
           </section>
           <footer class="docs-pattern_footer">
-            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__2-1 content_bleedbar&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
-    &lt;section class=&quot;content_hero&quot;&gt;
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__2-1 content__bleedbar&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
+    &lt;section class=&quot;content_hero&quot; style=&quot;background: #E3E4E5&quot;&gt;
         Content hero
     &lt;/section&gt;
     &lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;
@@ -362,6 +389,7 @@ main.content
             <ul class="docs-notes">
               <li>Simply add class .content__bleedbar to main.content.</li>
               <li>Only supports sidebars on the right, for now.</li>
+              <li>Inline styling is for demonstration purposes only; do not include it in your markup.</li>
             </ul>
           </footer>
         </div>
@@ -378,6 +406,8 @@ main.content
   .content__bleedbar .content_sidebar {
     padding: 3.75em 0 0.9375em 1.875em;
     margin-left: 0;
+    position: relative;
+    z-index: 1;
     background: transparent;
   }
   .lt-ie8 .content__bleedbar .content_sidebar {
@@ -392,7 +422,7 @@ main.content
     height: 100%;
     position: absolute;
     top: 0;
-    z-index: -1;
+    z-index: 0;
     margin-left: 10px;
     background: #f1f2f2;
   }
