--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -84,9 +84,9 @@
       <h2 class="docs-component_header"><span>Main content and sidebar</span></h2>
       <div class="docs-patterns">
         <div class="docs-pattern">
-          <h3 class="docs-pattern_header">Standard styling for the main content area and sidebar</h3>
+          <h3 class="docs-pattern_header">Standard mobile styling for the main content area and sidebar</h3>
           <section class="docs-pattern_pattern">
-<main class="content content__1-3" id="main" role="main">
+<main class="content" id="main" role="main">
     <section class="content_hero" style="background: #E3E4E5">
         Content hero
     </section>
@@ -103,7 +103,7 @@
 
           </section>
           <footer class="docs-pattern_footer">
-            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__1-3&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
     &lt;section class=&quot;content_hero&quot; style=&quot;background: #E3E4E5&quot;&gt;
         Content hero
     &lt;/section&gt;
@@ -137,31 +137,173 @@ main.content
           </footer>
         </div>
         <div class="docs-pattern">
-          <h3 class="docs-pattern_header">Width classes</h3>
+          <h3 class="docs-pattern_header">Left-hand navigation layout</h3>
+          <section class="docs-pattern_pattern">
+<main class="content content__1-3" id="main" role="main">
+    <section class="content_hero" style="background: #E3E4E5">
+        Content hero
+    </section>
+    <div class="content_bar"></div>
+    <div class="wrapper content_wrapper">
+        <section class="content_main">
+            <h2>Main content area</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            </p>
+        </section><!-- END .content_main -->
+        <aside class="content_sidebar" style="background: #F1F2F2">
+            Section navigation
+        </aside><!-- END .content_sidebar -->
+    </div><!-- END .content_wrapper -->
+</main><!-- END .content -->
+
+          </section>
           <footer class="docs-pattern_footer">
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__1-3&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
+    &lt;section class=&quot;content_hero&quot; style=&quot;background: #E3E4E5&quot;&gt;
+        Content hero
+    &lt;/section&gt;
+    &lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;
+    &lt;div class=&quot;wrapper content_wrapper&quot;&gt;
+        &lt;section class=&quot;content_main&quot;&gt;
+            &lt;h2&gt;Main content area&lt;/h2&gt;
+            &lt;p&gt;
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            &lt;/p&gt;
+        &lt;/section&gt;&lt;!-- END .content_main --&gt;
+        &lt;aside class=&quot;content_sidebar&quot; style=&quot;background: #F1F2F2&quot;&gt;
+            Section navigation
+        &lt;/aside&gt;&lt;!-- END .content_sidebar --&gt;
+    &lt;/div&gt;&lt;!-- END .content_wrapper --&gt;
+&lt;/main&gt;&lt;!-- END .content --&gt;</code></pre>
             <ul class="docs-codenotes">
               <li>
                 <pre class="docs-code"><code>.content__1-3</code></pre>
               </li>
+            </ul>
+            <ul class="docs-notes">
+              <li>Add a class of .content__L-R to main.content to determine the width ratio of .content_main and .content_sidebar, where 'L' is the left-hand item and 'R' is the right-hand item. The two common configurations are 1-3 (sidebar on the left, content on the right, in a ratio of 1:3) and 2-1 (content on the left, sidebar on the right, in a ratio of 2:1). It is assumed that the content is wider than the sidebar.</li>
+              <li>Inline styling is for demonstration purposes only; do not include it in your markup.</li>
+            </ul>
+          </footer>
+        </div>
+        <div class="docs-pattern">
+          <h3 class="docs-pattern_header">Right-hand sidebar layout</h3>
+          <section class="docs-pattern_pattern">
+<main class="content content__2-1" id="main" role="main">
+    <section class="content_hero" style="background: #E3E4E5">
+        Content hero
+    </section>
+    <div class="content_bar"></div>
+    <div class="wrapper content_wrapper">
+        <section class="content_main">
+            <h2>Main content area</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            </p>
+        </section><!-- END .content_main -->
+        <aside class="content_sidebar" style="background: #F1F2F2">
+            Section navigation
+        </aside><!-- END .content_sidebar -->
+    </div><!-- END .content_wrapper -->
+</main><!-- END .content -->
+
+          </section>
+          <footer class="docs-pattern_footer">
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__2-1&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
+    &lt;section class=&quot;content_hero&quot; style=&quot;background: #E3E4E5&quot;&gt;
+        Content hero
+    &lt;/section&gt;
+    &lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;
+    &lt;div class=&quot;wrapper content_wrapper&quot;&gt;
+        &lt;section class=&quot;content_main&quot;&gt;
+            &lt;h2&gt;Main content area&lt;/h2&gt;
+            &lt;p&gt;
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            &lt;/p&gt;
+        &lt;/section&gt;&lt;!-- END .content_main --&gt;
+        &lt;aside class=&quot;content_sidebar&quot; style=&quot;background: #F1F2F2&quot;&gt;
+            Section navigation
+        &lt;/aside&gt;&lt;!-- END .content_sidebar --&gt;
+    &lt;/div&gt;&lt;!-- END .content_wrapper --&gt;
+&lt;/main&gt;&lt;!-- END .content --&gt;</code></pre>
+            <ul class="docs-codenotes">
               <li>
                 <pre class="docs-code"><code>.content__2-1</code></pre>
               </li>
             </ul>
             <ul class="docs-notes">
               <li>Add a class of .content__L-R to main.content to determine the width ratio of .content_main and .content_sidebar, where 'L' is the left-hand item and 'R' is the right-hand item. The two common configurations are 1-3 (sidebar on the left, content on the right, in a ratio of 1:3) and 2-1 (content on the left, sidebar on the right, in a ratio of 2:1). It is assumed that the content is wider than the sidebar.</li>
+              <li>Inline styling is for demonstration purposes only; do not include it in your markup.</li>
             </ul>
           </footer>
         </div>
         <div class="docs-pattern">
           <h3 class="docs-pattern_header">Narrow content column option</h3>
+          <section class="docs-pattern_pattern">
+<main class="content content__2-1" id="main" role="main">
+    <section class="content_hero" style="background: #E3E4E5">
+        Content hero
+    </section>
+    <div class="content_bar"></div>
+    <div class="wrapper content_wrapper">
+        <section class="content_main content_main__narrow">
+            <h2>Main content area</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            </p>
+        </section><!-- END .content_main -->
+        <aside class="content_sidebar" style="background: #F1F2F2">
+            Section navigation
+        </aside><!-- END .content_sidebar -->
+    </div><!-- END .content_wrapper -->
+</main><!-- END .content -->
+
+          </section>
           <footer class="docs-pattern_footer">
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__2-1&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
+    &lt;section class=&quot;content_hero&quot; style=&quot;background: #E3E4E5&quot;&gt;
+        Content hero
+    &lt;/section&gt;
+    &lt;div class=&quot;content_bar&quot;&gt;&lt;/div&gt;
+    &lt;div class=&quot;wrapper content_wrapper&quot;&gt;
+        &lt;section class=&quot;content_main content_main__narrow&quot;&gt;
+            &lt;h2&gt;Main content area&lt;/h2&gt;
+            &lt;p&gt;
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            &lt;/p&gt;
+        &lt;/section&gt;&lt;!-- END .content_main --&gt;
+        &lt;aside class=&quot;content_sidebar&quot; style=&quot;background: #F1F2F2&quot;&gt;
+            Section navigation
+        &lt;/aside&gt;&lt;!-- END .content_sidebar --&gt;
+    &lt;/div&gt;&lt;!-- END .content_wrapper --&gt;
+&lt;/main&gt;&lt;!-- END .content --&gt;</code></pre>
             <ul class="docs-codenotes">
               <li>
                 <pre class="docs-code"><code>.content_main__narrow</code></pre>
               </li>
             </ul>
             <ul class="docs-notes">
-              <li>Add a class of .content-main__narrow to .content-main to get a one-column (in a 12-column grid) gutter on the right side.</li>
+              <li>Add a class of .content_main__narrow to .content_main to get a one-column (in a 12-column grid) gutter on the right side.</li>
+              <li>Inline styling is for demonstration purposes only; do not include it in your markup.</li>
             </ul>
           </footer>
         </div>
